--- a/history.txt
+++ b/history.txt
@@ -4,3 +4,14 @@
 2019-05-11*17:1*https://en.wikipedia.org/wiki/Dance_India_Dance*Dance India Dance - Wikipedia
 2019-05-11*17:1*https://en.wikipedia.org/wiki/Category:Dance_India_Dance*Category:Dance India Dance - Wikipedia
 2019-05-11*17:1*https://en.wikipedia.org/wiki/Dance_India_Dance_(season_5)*Dance India Dance (season 5) - Wikipedia
+2019-05-11*19:21*https://en.wikipedia.org/wiki/United_States*United States - Wikipedia
+2019-05-11*19:21*https://en.wikipedia.org/wiki/History_of_the_United_States*History of the United States - Wikipedia
+2019-05-11*19:21*https://en.wikipedia.org/wiki/Demography_of_the_United_States*Demography of the United States - Wikipedia
+2019-05-11*19:21*https://en.wikipedia.org/wiki/United_States_dollar*United States dollar - Wikipedia
+2019-05-11*19:21*https://simple.wikipedia.org/wiki/United_States*United States - Simple English Wikipedia, the...
+2019-05-11*19:24*https://en.wikipedia.org/wiki/United_States*United States - Wikipedia
+2019-05-11*19:24*https://en.wikipedia.org/wiki/History_of_the_United_States*History of the United States - Wikipedia
+2019-05-11*19:24*https://en.wikipedia.org/wiki/Demography_of_the_United_States*Demography of the United States - Wikipedia
+2019-05-11*19:24*https://en.wikipedia.org/wiki/United_States_dollar*United States dollar - Wikipedia
+2019-05-11*19:24*https://simple.wikipedia.org/wiki/United_States*United States - Simple English Wikipedia, the...
+2019-05-11*19:24*https://en.wikipedia.org/wiki/List_of_states_and_territories_of_the_United_States*List of states and territories of the United ...
